--- a/ulo/static/css/base.css
+++ b/ulo/static/css/base.css
@@ -695,9 +695,59 @@ body.nav_ul_open{
 
 }
 
-
-
 /* END MESSAGES */
+/* -------------------------------------------------------------------------- */
+
+
+
+
+/* EMAIL CONFIRMATION */
+/* -------------------------------------------------------------------------- */
+
+div.email_confirmation{
+
+	text-align: center;
+
+}
+
+#email_confirmation_form{
+
+	display: inline-block;
+	vertical-align: top;
+	padding: 10px;
+	border-radius: 0 0 4px 4px;
+	background-color: #E6E6E6;
+
+}
+
+#email_confirmation_form p{
+
+	margin: 10px;
+	font-size: 14px;
+
+}
+
+#email_confirmation_form .resend_confirmation{
+
+	display: inline-block;
+	vertical-align: middle;
+	margin: 10px;
+	padding: 10px;
+	border-radius: 4px;
+	border: 1px solid #333;
+	background-color: #FFF;
+
+}
+
+#email_confirmation_form .change_email{
+
+	display: inline-block;
+	vertical-align: middle;
+	margin: 10px;
+
+}
+
+/* END EMAIL CONFIRMATION */
 /* -------------------------------------------------------------------------- */
 
 
